--- a/t/environments/i18n.yml
+++ b/t/environments/i18n.yml
@@ -2,8 +2,4 @@ engines:
   template:
     template_flute:
       i18n:
-        class: MyTestApp::Lexicon2
-        method: try_to_translate
-        options:
-          prepend: 'X '
-          append: ' Z'
+        class: MyTestApp::Lexicon
